# py_blog_api

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.docker/: entrypoint.sh
.docker/postgres/: Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd-ec2.yml  ci.example  ci.yml
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/fixtures/: seeds.py
blog/migrations/: 0001_initial.py
blog/tests/e2e/: tests_admin.py
blog/tests/integrantion/: tests_admin.py  tests_models.py  tests_serializers.py  tests_views.py
blog/tests/unit/: tests_admin.py  tests_models.py  tests_serializers.py
common/: utils.py
common/management/commands/: seeds.py
setup/: settings.py  urls.py
